Open2Output.txt

Open1B.java:3: error: variable health is already defined in class Tank
    String health;
           ^
Open1B.java:5: error: variable health is already defined in constructor Tank
    Tank(int health, String health) {
                            ^
Open1B.java:6: error: incompatible types: String cannot be converted to int
        this.health = health;
                      ^
Open1B.java:7: error: incompatible types: String cannot be converted to int
        this.health = health; 
                      ^
4 errors